<resources>
    <string name="app_name">MY VIDEO CALL</string>
    <string name="welcome_to">Welcome To!</string>
    <string name="video_meeting_app">Video Meeting App</string>
    <string name="sing_in_to_your_account">Sing In to your account</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="password_hint">• • • • • •</string>
    <string name="sign_in">Sign In</string>
</resources>