<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/dxxLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:background="@color/purple_700"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:includeFontPadding="true"
                android:text="@string/welcome_to"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:includeFontPadding="true"
                android:text="@string/video_meeting_app"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textSignInLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/sing_in_to_your_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dxxLinearLayout" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_4sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textSignInLabel">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_4sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="true"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@null"
                    android:fontFamily="@font/ubuntu_regular"
                    android:hint="@string/example_gmail_com"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/white_off"
                    android:textSize="@dimen/_13sdp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="true"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@null"
                    android:fontFamily="@font/ubuntu_regular"
                    android:hint="@string/password_hint"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/white_off"
                    android:textSize="@dimen/_13sdp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintTop_toBottomOf="@id/cardSignIn"/>

        <TextView
           android:id="@+id/textInSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="Don't I have an account"
            android:layout_margin="@dimen/_8sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintTop_toBottomOf="@id/buttonSignIn" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:layout_margin="@dimen/_8sdp"
            android:text="SIGN UP"
            android:textColor="@color/red"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintTop_toBottomOf="@id/textInSign" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>